# ghc-core

./: LICENSE  README  ghc-core.cabal  ghc-core.hs  stack.yaml
