name:           ghc-core
version:        0.5.6
license:        BSD3
license-file:   LICENSE
author:         Don Stewart
maintainer:     shachaf@gmail.com
homepage:       https://github.com/shachaf/ghc-core
category:       Development
synopsis:       Display GHC's core and assembly output in a pager
description:    A convenient command line wrapper for GHC that displays
                GHC's optimised core and assembly output in a human
                readable, colourised manner, in a pager. Unix systems
                only, currently.
                .
                Usage:
                .
                > ghc-core A.hs
                .
                > ghc-core -fvia-C -optc-O3 A.hs
                .
build-type:     Simple
cabal-version:  >= 1.2

executable ghc-core
    build-depends:  base >= 4 && < 5,
                    process >=1.0.1,
                    pcre-light,
                    colorize-haskell,
                    directory,
                    filepath
    main-is:        ghc-core.hs
    ghc-options:    -Wall -O2
